# diffviewer

./: .env.example  .gitignore  2026-05-22-golden-review-mock-phased-implementation-plan.md  2026-05-29-insights-implementation-plan.md  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  review-component-gallery.html  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml  frontend.yml  sas-deploy.yml
backend/: .env.example  pyproject.toml
backend/src/diffviewer_api/: __init__.py  config.py  deps.py  main.py
backend/src/diffviewer_api/models/: __init__.py  comments.py  files.py  github.py  insights.py  state.py
backend/src/diffviewer_api/routes/: comments.py  files.py  health.py  insights.py  pull_requests.py  review_state.py
backend/src/diffviewer_api/services/: comment_service.py  file_service.py  github_client.py  insight_provider.py  insight_service.py  pull_request_recommendation_service.py  pull_request_service.py  read_state_store.py
backend/src/diffviewer_api/storage/: sqlite.py
backend/tests/: test_config.py  test_github_client.py  test_health.py  test_insight_routes.py  test_insight_service.py  test_pull_request_routes.py  test_read_state_store.py  test_static_files.py
scripts/: generate-fixture.mjs  validate-data-fixtures.mjs
src/: App.css  App.test.tsx  App.tsx  mockReview.ts
src/components/: ProjectTreePanel.test.tsx  ProjectTreePanel.tsx  ReviewStatusChip.tsx
src/data/: diff.ts  index.ts  rawFixtures.ts  reviewFixtures.ts  types.ts  viewModel.ts
src/lib/: DiffSettingsProvider.tsx  (+11 more)
(+50 files in other folders)
